--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,16 @@
     font-weight: 400;
 }
 
+body {
+    width: 100vw;
+    height: 100vh;
+}
+
+main {
+    width: 100vw;
+    height: 100vh;
+}
+
 .wrapper {
     height: 100vh;
     width: 100vw;
@@ -15,7 +25,7 @@
 .container-left {
     display: inline-block;
     width: 60%;
-    margin: 40vh 0;
+    margin: 40vh 0 0 0;
     padding-left: 7%;
 }
 
@@ -29,8 +39,8 @@
 
 img {
     position: relative;
-    top: 22vh;
-    right: 20%;
+    top: 10%;
+    right: 125px;
 }
 
 h1 {
@@ -50,6 +60,7 @@ p {
 }
 
 button {
+    position: relative;
     font-size: 24px;
     line-height: 36px;
     text-align: center;
@@ -100,7 +111,7 @@ header {
     margin: 24px 0 0 35px;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1400px) {
     .wrapper {
         text-align: center;
     }
@@ -109,9 +120,8 @@ header {
         display: block;
         width: 100vw;
         height: 50vh;
-        padding: 10% 0 0;
         text-align: center;
-        margin: 0 auto;
+        margin: 50px auto;
     }
 
     .container-right {
@@ -119,7 +129,7 @@ header {
         width: 100vw;
         height: 50vh;
         margin: 0;
-        padding: 5%;
+        padding: 0;
     }
 
     h1 {
@@ -149,9 +159,10 @@ header {
 
     img {
         position: initial;
+        padding-top: 30px;
         display: block;
-        width: 271px;
-        height: 322px;
+        width: 200px;
+        height: 246px;
         margin: 0 auto;
     }
 }
